test/unit/goldens/testParseExprAtomLabelsNmemberFail.golden
Text: 'labels ∌ {a}'

Tokens: [labels,∌,{a}]

Expr Text: labels ∌ {a}

Error: Pacer.Class.Parser.parseWith:1:13:
  |
1 | labels ∌ {a}
  |             ^
Unexpected char '{'. Expected exactly one element, not set syntax.

